Footer: Fix: Correct font-size of child elements
We override these styles so we need to explicitely set the size to
prevent the font being too big.

--- a/components/footer/assets/Footer.scss
+++ b/components/footer/assets/Footer.scss
@@ -9,4 +9,8 @@
   .govuk-link, a {
     @extend .govuk-footer__link;
   }
+
+  ol, ul, p {
+    font-size: inherit;
+  }
 }
